    :allowed_elements Hash to facilitate faster lookups when attempting to
    determine whether an element is in the whitelist. [Suggested by Nicholas
    Evans]
  * The environment hash passed into transformers now includes a
    :whitelist_nodes Array, so transformers now have insight into what nodes
    have been whitelisted by other transformers. [Suggested by Nicholas Evans]

Version 1.2.1 (2010-04-20)
  * Added a :remove_contents config setting. If set to true, Sanitize will
    remove the contents of all non-whitelisted elements in addition to the
    elements themselves. If set to an Array of element names, Sanitize will
    remove the contents of only those elements (when filtered), and leave the
    contents of other filtered elements. [Thanks to Rafael Souza for the Array
    option]
  * Added an :output_encoding config setting to allow the character encoding for
    HTML output to be specified. The default is 'utf-8'.
  * The environment hash passed into transformers now includes a :node_name item
    containing the lowercase name of the current HTML node (e.g. "div").
  * Returning anything other than a Hash or nil from a transformer will now
    raise a meaningful Sanitize::Error exception rather than an unintended
    NameError.

Version 1.2.0 (2010-01-17)
  * Requires Nokogiri ~> 1.4.1.
  * Added support for transformers, which allow you to filter and alter nodes
    using your own custom logic, on top of (or instead of) Sanitize's core
    filter. See the README for details and examples.
  * Added Sanitize.clean_node!, which sanitizes a Nokogiri::XML::Node and all
    its children.
  * Added elements <h1> through <h6> to the Relaxed whitelist. [Suggested by
    David Reese]

Version 1.1.0 (2009-10-11)
  * Migrated from Hpricot to Nokogiri. Requires libxml2 >= 2.7.2 [Adam Hooper]
  * Added an :output config setting to allow the output format to be specified.
    Supported formats are :xhtml (the default) and :html (which outputs HTML4).