@@ -425,3 +425,10 @@ describe 'transformers' do
     end
   end
 end
+
+describe 'bugs' do
+  should 'work around Nokogiri 1.4.2+ unterminated script/style element bug' do
+    Sanitize.clean!('foo <script>bar').should.equal('foo bar')
+    Sanitize.clean!('foo <style>bar').should.equal('foo bar')
+  end
+end
