@@ -9,6 +9,9 @@ Version 1.2.? (git)
   * The environment hash passed into transformers now includes a
     :whitelist_nodes Array, so transformers now have insight into what nodes
     have been whitelisted by other transformers. [Suggested by Nicholas Evans]
+  * Added a workaround for a bug in Nokogiri 1.4.2 and higher (issue #315) that
+    causes "</body></html>" to be appended to the CDATA inside unterminated
+    script and style elements.
 
 Version 1.2.1 (2010-04-20)
   * Added a :remove_contents config setting. If set to true, Sanitize will
